--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@goodforyou/vite-plugin-markdown-import",
 	"description": "Vite plugin to import markdown files with support for front-matter",
 	"private": false,
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/good-for-you-web-services/vite-plugin-import-markdown"
@@ -40,6 +40,6 @@
 	},
 	"peerDependencies": {
 		"front-matter": "^4.0.0",
-		"vite": "^5.0.0 || ^6.0.0"
+		"vite": "^6.0.0"
 	}
 }
