--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"import": "./dist/index.js"
+			"import": "./dist/index.js",
+			"require": "./dist/index.js"
 		},
 		"./client": {
 			"types": "./client.d.ts"
