--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
       time: "05:00"
       timezone: "America/Los_Angeles"
     assignees:
-      - good-for-you-web-services/admin
+      - thenickoftime
     groups:
       security-updates:
         applies-to: security-updates
